# Computer_Graphics_Project

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  istruzioni_installazione_ollama.sh  istruzioni_setup.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml
assets/models/: README.md
config/: materials.yaml  settings.yaml
config/prompts/: multi_room_prompt.txt  system-prompt.txt  system_prompt.txt
docker/: Dockerfile  entrypoint.sh
scripts/: blender_runner.py  check_coverage.py  generate_primitives.py  run_pipeline.py  setup_assets.py
src/computer_graphics/: __init__.py  asset_retriever.py  cli.py  config_loader.py  constraint_solver.py  critic_loop.py  gemini_client.py  input_handler.py  json_parser.py  llm_client.py  ollama_client.py  openai_client.py  orchestrator.py  poly_haven_catalog.py  preview.py  prompt_builder.py  scene_graph.py  validator.py
src/computer_graphics/blender/: __init__.py  renderer.py  scene_builder.py
src/nl2scene3d/: __init__.py  orchestrator.py
tests/: conftest.py  test_asset_retriever.py  test_blender_logic.py  test_config_loader.py  test_input_handler.py  test_json_parser.py  test_llm_client.py  test_ollama_client.py  test_ollama_client_extended.py  test_openai_client.py  test_orchestrator.py  test_orchestrator_extended.py  test_preview.py  test_prompt_builder.py  test_prompt_builder_extended.py  test_scene_graph.py  test_scene_graph_extended.py  test_validator.py  test_validator_extended.py
tests/fixtures/: sample_objects.json  sample_response_clean.json  sample_response_dirty.txt
