[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-graphics"
version = "1.0.0"
description = "Pipeline automatizzata per la generazione di scene 3D da linguaggio naturale tramite Ollama e Blender"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Computer_Graphics_Group"}
]
keywords = ["blender", "3d", "nlp", "ollama", "scene-generation", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.9",
    "black==24.3.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.6.0",
    "responses>=0.25.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
computer-graphics = "computer_graphics.cli:main"
nl2scene3d = "computer_graphics.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/nl2scene3d"
Documentation = "https://github.com/yourusername/nl2scene3d/docs"
Repository = "https://github.com/yourusername/nl2scene3d"
Issues = "https://github.com/yourusername/nl2scene3d/issues"
Changelog = "https://github.com/yourusername/nl2scene3d/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
]
ignore = [
    "ANN101",  # Missing type annotation for self (deprecated)
    "ANN102",  # Missing type annotation for cls (deprecated)
    "ANN401",  # Dynamically typed expressions (Any) are allowed
    "F821",    # Undefined name (sometimes needed for Blender's bpy)
    "UP038",   # Use `X | Y` in `isinstance` (conflicts with some Black versions on 3.11)
]

[tool.ruff.lint.isort]
known-first-party = ["computer_graphics"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]  # Relax annotations in tests


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/computer_graphics --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/computer_graphics"]
omit = ["tests/*", "scripts/*", "*/blender/*", "*/cli.py"]

[tool.coverage.report]
fail_under = 90
precision = 2
skip_covered = false
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
